--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </div>
         </div>
 
-        <div class="plus" id="plusOne"><img src="up-arrow.png"></div>
-        <div class="minus" id="minusOne"><img src="download.png"></div>
+        <div class="plus" id="plusOne"><img src="smile.png"></div>
+        <div class="minus" id="minusOne"><img src="bad.png"></div>
   
 
         <div class="globe">
